@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: VT100Screen.m,v 1.238 2006-08-13 20:00:48 dnedrow Exp $
+// $Id: VT100Screen.m,v 1.239 2006-09-06 23:54:22 yfabian Exp $
 //
 /*
  **  VT100Screen.m
@@ -348,7 +348,8 @@ static screen_char_t *incrementLinePointer(screen_char_t *buf_start, screen_char
 	if (width==WIDTH && height==HEIGHT) return;
 	
 	// get lock
-	[self acquireLock];
+    if (![self tryLock])
+        return;	
 					
 	// create a new buffer
 	total_height = max_scrollback_lines + height;
