@@ -1,3 +1,8 @@
+2006-09-06  fabian
+
+    * Added a lock to PSMTabBarControl to avoid crashes.
+    * Fixed a blinking timing bug found by Roine Gusatfsson.
+    
 2006-09-01  fabian
 
     * Fixed a memory leak.
